# a2ui

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CONTRIBUTING.md  Package.swift  README.md  eslint.preset.mjs  hooks.py  lychee.toml  mkdocs.yaml  package.json  pyproject.toml  swift.code-workspace
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: docs.yml  kotlin_agent_sdk_build_and_test.yml  presubmit-lint.yml  swift_build_and_test.yml  swift_core_build_and_test.yml  web_ci.yml
agent_sdks/python/: release.sh
docs/: index.md
docs/contributing/: release.md
docs/guides/: a2ui-with-any-agent-framework.md  a2ui_over_mcp.md
docs/public/: quickstart.md  roadmap.md
docs/scripts/: convert_docs.py
eval/: main.py  tasks.py
eval/a2ui_eval/: dataset.py  scorers.py
eval/datasets/: dataset_schema.json  defaults.py  prompts_v0_9_1.yaml  prompts_v1_0.yaml  v0_9_prompts.yaml
eval/tests/: test_scorers.py  test_strategies.py
renderers/: README.md
renderers/angular/: CHANGELOG.md  angular.json  package.json  tsconfig.json
renderers/lit/: README.md  (+2 more)
samples/: README.md
samples/community/agent/adk/gemini_enterprise/v0_9/: .gcloudignore  .gitignore  README.md  __main__.py  agent.py  agent_executor.py  deploy.sh  gemini_enterprise_composite_catalog.json  main.py  prompt_builder.py  pyproject.toml  tools.py
samples/community/agent/adk/gemini_enterprise/v0_9/examples/0.9/: booking_form.json  canvas_side_panel.json  confirmation.json  iframe_srcdoc.json  iframe_url_canvas.json  material_card_flight_status.json  material_dashboard.json  material_dialog.json  material_input_form.json  material_preferences_tabs.json  material_table_orders.json  single_column_list.json  two_column_list.json
scripts/: fix_format.sh  fix_licenses.sh
swift/: .gitignore
(+727 files in other folders)
