# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "a2ui-v09-demo"
version = "0.1.0"
description = "Sample ADK-based agent that demonstrates A2UI (Agent-to-UI) v0.9, served over the A2A protocol."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # The `http-server` extra pulls in `starlette` and `sse-starlette`, which
    # are required by A2AStarletteApplication / JSONRPCApplication.
    "a2a-sdk[http-server]>=0.3.25,<0.4",
    "click>=8.1.8",
    "google-adk>=1.28.1",
    "google-genai>=1.27.0",
    "python-dotenv>=1.1.0",
    "uvicorn",
    # Required for Vertex AI when GOOGLE_GENAI_USE_VERTEXAI=TRUE (Cloud Run).
    "google-cloud-aiplatform>=1.84",
    "jsonschema>=4.0.0",
    # Published A2UI agent SDK (schema manager, catalog loading, parsing).
    "a2ui-agent-sdk>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

# Cloud Run buildpacks run the `start` script to launch the server.
[project.scripts]
start = "main:serve"
